fix: updated some misalignments in hero

--- a/client/src/Hero.css
+++ b/client/src/Hero.css
@@ -39,21 +39,32 @@
     top: 65%;   /* move higher */
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    top: 50vh;
+    left: 40vw;
   }
+
+  .hero-subpart {
+    display: flex;  
+  } 
   
   
   .hero-word {
     font-family: 'FuturaExtraBold', Helvetica, sans-serif;
     font-weight: 800;
-    font-size: 200px;
+    font-size: 150px;
     margin: 0;
     color: #111;
     display: block;
+
   }
   
   /* Start */
   .hero-word.start {
     transform: rotate(-3.8deg);
+    position: absolute;
+    top: -200px;
   }
   
   .hero-word.it
@@ -61,12 +72,17 @@
      transform: rotate(7.6deg);
      margin-top: -4rem;
      margin-left: 100px;
+     position: absolute;
+     left: -80px;
  }
   
   .hero-word.up {
     transform: rotate(-6.84deg);
-    margin-left: 40px;    /* align 'Up' more directly under Start */
+    /* margin-left: 40px;    align 'Up' more directly under Start */
     margin-top: 20px;   /* keep it lifted up */
+    position: absolute;
+    top: -90px;
+    left: 200px;
   }
   .hero-timeline {
     display: flex;
